<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_title">Welcome to IChing</string>
    <string name="app_name">IChing</string>
    <string name="references_check_label">Hexagram Ref</string>
    <string name="cast_iching_label">Cast Hexagram</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_text">
	    The I Ching (Wade-Giles), "Yì Jīng" (Pinyin), also known as the Book of Changes, 
		Classic of Changes; and Zhouyi, is one of the oldest of the Chinese classic texts.
		The book contains a divination system comparable to Western geomancy or the West African 
		Ifá system. In Western cultures and modern East Asia, it is still widely used for this purpose.
		<b/>
		<b><font color="#F49A05">Designed and developed by immortal_ego@hotmail.coms</font></b>
	</string>
	<string name="settings">Settings</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="cancel">Cancel</string>
	<string name="confirmation_exit_text">Are you sure you want to exit?</string>
	<string name="gua_label">64 Hexagrams</string>
	<string name="switch_view">Switch view</string>
	<string name="grid_view">Image view</string>
	<string name="list_view">List view</string>
	<string name="music_title">Music Settings</string>
	<string name="music_summary">Turn on/off Music</string>
	<string name="music_summary_on">Turn on/off Music [ON]</string>
	<string name="music_summary_off">Turn on/off Music [OFF]</string>
	<string name="hexagrams_title">Hexagram</string>
	<string name="hexagrams_summary">Hexagram Summary</string>
	<string name="settings_label">IChing Settings</string>
	<string name="music_preference_category">Music</string>
	<string name="hexagrams_preference_category">Hexagrams</string>
	<string name="hexagrams_view_preference">Hexagrams\' view</string>
	<string name="hexagrams_view_preference_summary">Select a view that suits you to display hexagrams</string>
	<string name="instruction">Enter a question you want to consult IChing with, and later you can save it. After casting, you can click on hexagram\'s title to get reading.</string>
	<string name="destin">Divination</string>
	<string name="originalHexagram">Original</string>
	<string name="relatingHexagram">Relating</string>
	<string name="tossCoin">Toss</string>
	<string name="restCoin">Another Cast</string>
	<string name="saveDivination">Save</string>
	<string name="load_divinations">My Divinations</string>
	<string name="empty_question">Please enter your question in order to save your divination</string>
	<string name="records_full">You don\'t have enough slots to save your divination, do you want to remove the first one from database in order to save this one.</string>
	<string name="succesful_save">Divination has been saved!</string>
	<string name="divinations_preference_category">Divinations</string>
	<string name="divination_title">Number of Divinations</string>
	<string name="divination_summary">Set a limit to the number of divinations you can store in the system, you can set it to 10, 20, 50 or no limit at all</string>
	<string name="small">Small(10)</string>
	<string name="medium">Medium(20)</string>
	<string name="large">Large(50)</string>
	<string name="infinite">Infinite</string>
	<string name="your_question">Your question:</string>
	<string name="your_divinations">Your divination:</string>
	<string name="current_value_view_on">[List View]</string>
	<string name="current_value_view_off">[Grid View]</string>
	<string name="open_bracket">[</string>
	<string name="close_bracket">]</string>
	<string name="on">ON</string>
	<string name="off">OFF</string>
	<string name="exceed_numember_of_records_warning_title">You currently have more records than the limit you are setting, please remove some records before proceeding.</string>
	<string name="confirm_delete_divination">Do you want to delete this divination?</string>
	<string name="divination_deleted">Divination deleted!</string>
	<string name="randomizer">Hex by Trigrams</string>
	<string name="qian_gong">Ch\'ien</string>
	<string name="kun_gong">K\'un</string>
	<string name="xun_gong">Sun</string>
	<string name="dui_gong">Tui</string>
	<string name="gen_gong">Ken</string>
	<string name="li_gong">Li</string>
	<string name="kan_gong">K\'an</string>
	<string name="zhen_gong">Chen</string>
	<string name="instruction_random">Click on the screen</string>
	<string name="developer">Designed and developed by Immortal_ego@hotmail.com</string>
</resources>