<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
   <TextView
   	  style="@style/commonCenterizer.mainTitle"
      android:text="@string/main_title"/>      
   <Button
   	  style="@style/commonCenterizer"
   	  android:id="@+id/references_check"
      android:text="@string/references_check_label" />
   <Button
   	  style="@style/commonCenterizer"
   	  android:id="@+id/cast_iching"
      android:text="@string/cast_iching_label" />
   <Button
   	  style="@style/commonCenterizer"
   	  android:id="@+id/about"
	  android:text="@string/about_label" />
   <Button
   	  style="@style/commonCenterizer"
      android:id="@+id/exit"
      android:text="@string/exit_label" />
</LinearLayout>
